public/styles/style.css
/* ... */
.MuiCardContent-root {
    background-color: transparent !important;
}

.info-tile-base .MuiCardContent-root {
    display: inline-block;
    vertical-align: middle;
    text-align: left;
    width: 79%;
}

.css-bhp9pd-MuiPaper-root-MuiCard-root {
    border-radius: 20px !important;
    background: transparent
        linear-gradient(180deg, #ffffff27 0%, #0000004b 100%) 0% 0% no-repeat
        padding-box !important;
}

.extraLight {
    font-weight: lighter !important;
    font-family: Mulish, sans-serif !important;
}

.distanceFooter {
    padding-bottom: 50px;
}

.distanceHeader {
    margin-top: 78px;
}

@media (max-width: 600px) {
    .roadmapTitle,
    .overview-title {
        font-size: 3rem !important;
        padding-top: 40px !important;
    }

    .tile-title {
        text-align: center !important;
    }

    .infoButtons .MuiButtonBase-root {
        font-size: 1rem !important;
        min-width: 100px !important;
        padding: 8px 2px !important;
        line-height: 17px !important;
        border-radius: inherit !important;
    }

    .welcome {
        font-size: 12.5vw;
        text-align: center;
    }
    .welcomeSub {
        font-size: 4vw;
        width: 90%;
        text-align: center;
    }
    .assetsTitle {
        justify-content: center;
        font-size: 10.5vw;
        padding-top: 5%;
    }

    .assetsSub {
        font-size: 1rem !important;
        margin-top: 0;
        width: 90%;
        margin-left: 5%;
        text-align: center;
    }

    .gangster3 {
        width: 56%;
        margin-top: 0;
        margin-bottom: -2%;
        position: relative;
        left: 25%;
    }

    .browseButtonDiv {
        padding-top: 25px;
        justify-content: center;
        display: flex;
        padding-bottom: 20px;
    }

    .browseSub {
        font-size: 2.5vw;
        margin-top: 0;
        width: 90%;
        margin-left: 5%;
        text-align: center;
    }

    .title {
        justify-content: center;
        font-size: 3rem !important;
        padding-top: 10vh;
    }

    .textSub {
        font-size: 1rem !important;
        width: 100%;
        padding-left: 5%;
        padding-right: 5%;
        text-align: center;
    }

    .empireButtonDiv {
        justify-content: center;
        display: flex;
    }

    .farmImage {
        width: 70%;
        padding-left: 25%;
        margin-left: 0%;
        padding-top: 0;
    }

    .button {
        font-size: 5.5vw !important;
        margin: 1%;
    }

    .buttonSeed {
        font-size: 5.5vw !important;
        margin: 1%;
    }

    .buttonBrowse {
        font-size: 5.5vw !important;
        margin: 1%;
    }

    .buttonAssets {
        font-size: 5.5vw !important;
        margin: 1%;
    }

    .buttonLeaks {
        padding-left: 14%;
        padding-right: 16%;
        padding-top: 3%;
        padding-bottom: 2%;
    }

    .welcomeLeak {
        display: flex;
        justify-content: center;
        font-size: 3rem;
    }

    .wrongMobile.top {
        margin-left: 0;
    }

    .wrongMobile.bottom {
        margin-left: 0;
    }
    .textSub2 {
        font-size: 2.5vw;
        margin-top: 0;
        width: 90%;
        margin-left: 5%;
        text-align: center;
    }
    .overFarm {
        text-align: inherit;
        padding-right: 0;
    }
    .distanceHeader {
        margin-top: 0px;
    }
}

